# kpix

./: .gitignore  AGENTS.md  README.md  script.sh  start.sh
backend/: .env.example  README.md  alembic.ini  planbackend.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/kpix_backend/: main.py
backend/src/kpix_backend/api/: __init__.py  actions.py  auth.py  comments.py  dashboards.py  deps_resources.py  imports.py  kpis.py  organizations.py  reporting.py  router.py  users.py
backend/src/kpix_backend/core/: config.py  db.py  deps.py  enums.py  kpi_logic.py  logging.py  security.py
backend/src/kpix_backend/models/: __init__.py  action.py  comment.py  dashboard.py  import_job.py  kpi.py  organization.py  team.py  user.py
backend/src/kpix_backend/schemas/: action.py  auth.py  comment.py  dashboard.py  import_job.py  kpi.py  organization.py  reporting.py  team.py  user.py
backend/tests/: test_kpi_logic.py  test_security.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  planfrontend.md
frontend/src/: App.tsx  main.tsx
frontend/src/api/: actions.ts  auth.ts  client.ts  comments.ts  dashboards.ts  demoData.ts  imports.ts  kpiValues.ts  kpis.ts  reporting.ts  users.ts
frontend/src/app/: ProtectedRoute.tsx  auth.tsx
frontend/src/components/: BadgeStatus.tsx  Button.tsx  Card.tsx  Table.tsx
frontend/src/pages/: DashboardDetailPage.tsx  DashboardsListPage.tsx  ImportsPage.tsx  KpiDetailPage.tsx  LoginPage.tsx  OverviewPage.tsx  SignUpPage.tsx
frontend/src/styles/: global.css  (+1 more)
(+3 files in other folders)
